# solana-todo-list

./: .editorconfig  .gitignore  .prettierrc  CNAME  Cargo.toml  Read.md  package.json
.github/workflows/: deploy.yml  nextjs.yml
anchor/: Anchor.toml  package.json
anchor/app/: package-lock.json  package.json  pnpm-lock.yaml
anchor/app/src/app/: layout.tsx
anchor/app/src/components/: Loading.tsx
anchor/app/src/constants/: idl.json  (+1 more)
anchor/programs/anchor_dapp_todo/: Cargo.toml
anchor/programs/solana-todo-list/: Cargo.toml
anchor/tests/: authorFilter.ts  solana-todo-list.ts
app/: package.json  pnpm-lock.yaml
app/src/app/: Container.tsx  layout.tsx  page.tsx
app/src/constants/: idl.json
app/src/content/: withWalletContent.tsx
app/src/hooks/: todo.ts  useMounted.ts
app/src/theme/: ThemeOptions.ts  types.ts
app/src/utils/: authorFilter.ts
native/: cicd.sh  package.json
native/program/: Cargo.toml
native/program/src/: error.rs  lib.rs
native/program/src/instructions/: add_todo.rs  initialize_user.rs  mark_todo.rs  mod.rs  remove_todo.rs  update_todo.rs
native/program/src/states/: mod.rs  todo.rs  update_todo.rs  user.rs
native/programs/: Cargo.toml
native/tests/: test.ts
native/ts/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
native/ts/instructions/: addTodo.ts  index.ts  markTodo.ts  removeTodo.ts  testUser.ts  updateTodo.ts
native/ts/states/: addTodo.ts  index.ts  initializeUser.ts  user.ts
native/ts/utils/: common.ts  transfer.ts
programs/solana-todo-list/src/: error.rs  lib.rs
tests/: solana-todo-list.ts
(+61 files in other folders)
