[package]
name = "native-dapp-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
num-derive = "0.4.1"
num-traits = "0.2.17"
solana-program = "1.17.6"
thiserror = "1.0.50"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]


